--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-APP_NAME=Laravel
+APP_NAME=APIRestful_Community
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:9ceGmqMD/LI3TDcnvM3WJr/OVZHcFJbgXTe9iJten5w=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://apirestful-community.dev
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=db_community
+DB_USERNAME=root
+DB_PASSWORD=willy
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -21,12 +21,19 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+MAILGUN_DOMAIN=null
+MAILGUN_SECRETO=null
+SPARKPOST_SECRET=null
+
+MAIL_FROM_ADDRESS=postmaster@apirestful-community.dev
+MAIL_FROM_NAME="API RESTFul"
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
